<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cogknit.foveasdk.ListViewMultipleSelectionActivity">




    <!--Button
        android:id="@+id/sendbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/proceed" /-->



    <TextView
        android:id="@+id/textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:capitalize="characters"
        android:text="@string/headerinfo"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/primary_text_dark"
        android:layout_centerVertical="true"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/desclaimertextview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"

        android:capitalize="characters"
        android:text="@string/desclaimerText"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/primary_text_dark"
        android:layout_centerVertical="true"
        android:textSize="12dp"/>



    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true">

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelbutton"
            android:layout_gravity="bottom"
            android:textColor="#ffffff"
            android:background="?attr/colorPrimary"
            android:layout_weight="0.45"/>

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.1" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:id="@+id/sendbutton"
            android:layout_gravity="bottom"
            android:textColor="#ffffff"
            android:background="?attr/colorPrimary"
            android:layout_weight="0.45"/>
    </LinearLayout>

    <EditText
        android:id="@+id/invitemsgbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/invitemsg"
        android:layout_above="@id/linearLayout"
        android:inputType="textMultiLine"
        android:textSize="16dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/invitemsgbox"
        android:layout_below="@id/desclaimertextview"
        />

</RelativeLayout>
